[FIX] Search filter button's icons aligned centered.

--- a/addons/openerp/static/css/style.css
+++ b/addons/openerp/static/css/style.css
@@ -885,7 +885,7 @@ div.filter-a button.filter_icon:focus {
 }
 
 div.filter-a button table {
-    margin: 4px;
+    margin: 10px;
     text-align: center;
 }
 
